	PR libstdc++/13583 	* include/bits/locale_classes.h (locale::_Impl::_M_install_cache): 	Move out of line. 	* src/locale.cc: Define here, add mutex. 	* configure.ac (libtool_VERSION): To 6:7:0. 	* configure: Regenerate. 	* testsuite/testsuite_abi.cc (check_version): Add GLIBCXX_3.4.7. 	* config/linker-map.gnu: Export locale::_Impl::_M_install_cache.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@105221 138bc75d-0d04-0410-961f-82ee72b054a4